--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.3",
     "nodemon": "^3.1.10"
   }
 }
